# flash-distributed-moe

./: CMakeLists.txt  README.md
.github/workflows/: run-all-tests.yml
ci/dockerfiles/: ci_image_rocm_6_4_vllm_0_10.dockerfile  ci_image_rocm_7_0_vllm_0_11_2.dockerfile  ci_image_rocm_7_0_vllm_0_11_2_mpi.dockerfile
cmake/: buildRocshmem.cmake
include/: iMoeKernelLauncher.h
python/: example.py  pyMoeLauncherTorch.cpp  pyMoeLauncherTorch_hip.cpp  py_moe_launcher_torch.cpp  setup.py
rocshmemExperiments/moeLikeCommunication/: compileAndRun.sh  moeLikeCommunication.cpp
rocshmemExperiments/pointMsgBroadcast/: compileAndRun.sh  pointMsgBroadcast.cpp
scripts/: buildAndRun.sh  cmake_build.sh
src/: lib.version  moeKernelLauncher.cpp
src/hip/: CMakeLists.txt  hipCommon.h  hipHostCommon.h  void.hip
src/hip/common/: gemmTileMetadata.h  metadata.h  runtimeConfig.h
src/hip/common/rocshmem/: rocshmem.h
src/hip/gemm/: gemmTileBlock.h  tileGemm.h
src/hip/kernel/: moeKernel.h
src/hip/kernel/remote/: remoteComManager.h
src/hip/kernel/tasks/: ffn1Task.h  ffn2Task.h  reduceTask.h  taskDesc.h
src/hip/kernel/tasks/internal/: expertFFN1Block.h  gateBlock.h  gemmTileBlock.h  reduceBlock.h  softmaxBlock.h  topkBlock.h  writeGemmTileBlock.h
src/hip/kernel/tasks/internal/gemmImpl/: basicGemm.h  basicGemmTileImpl.h  gemmImplSelector.h
src/hip/launcher/: moeKernelLauncher.h  moeKernelLauncher.hip
src/hip/saxpy/: saxpy.h  saxpy.hip
src/hip/scheduler/: schedulerPrototype.h  schedulerPrototype.hip
src/hip/softmax/: softmaxTile.h
src/hip/taskSystem/: taskAllocator.h  taskManager.h  workQueue.h  workerLoop.h
src/hip/tasks/internal/: expertFFN1.h  expertFFN1Block.h  gemmTileBlock.h  reduceBlock.h  softmaxBlock.h  topkBlock.h
src/hip/utils/: hipDeviceUtils.h  hipWarpSize.h
src/hip/workQueue/: workQueue.h
src/tools/: compileTimeSelector.h
test/common/: moeTools.h  utils.h
test/cpp/: CMakeLists.txt  schedulerUnittest.cpp  stubUnittest.cpp
test/cpp/benchmarks/: benchmarkUtils.h  gemmBenchmark.cpp  moeGemmTileBenchmark.hip  moeKernelBenchmark.cpp  staticVsTaskSystemGemmBenchmark.cpp
test/cpp/moe/: moeApiTest.cpp  moeExpertFFN1Test.hip  moeExpertsTests.hip  moeFullTest.hip  moeGateTest.hip  moeRoutingTest.hip  moeTest.cpp  moeTest.hip
test/cpp/moe/internal/: moeExpertFFN1Test.hip  moeExpertsTests.hip  moeGateTest.hip  moeRoutingTest.hip
test/cpp/moe/reference/: refFullMoe.h  refGemm.h  refMoeGate.h
test/cpp/moeTools/: compileTimeSelectorTest.cpp
test/cpp/reference/: refFullMoe.h  refGemm.h  refMoeGate.h  refTopk.h
test/cpp/taskSystem/: saxpyCoherenceTest.hip
test/cpp/taskSystem/gemmTest/: gemmTest.cpp  staticGemmKernel.hip  taskSystemGemmKernel.hip  tileGemm.h
test/cpp/taskSystemUnittests/: linear.hip  saxpyCoherenceTest.hip  schedulerPrototype.hip  schedulerUnittest.cpp
test/cpp/taskSystemUnittests/gemmTest/: gemmBenchmark.cpp  gemmTest.cpp  gemmTest.hip  staticGemmKernel.h  staticGemmKernel.hip  taskSystemGemmKernel.h  taskSystemGemmKernel.hip  tileGemm.h
test/cpp/utils/: utils.h
test/multiGPU/cpp/: CMakeLists.txt
test/multiGPU/cpp/moe/: CMakeLists.txt  moeDistBaseTest.h  moeDistTest.cpp  moeMultiGPUTests.cpp
test/multiGPU/cpp/rocshmem/: CMakeLists.txt  envSetupCorectness.cpp  moeLikeCommPattern.cpp  rocshmemCommon.h
test/multiGPU/python/: benchmark_dp.py  flash_moe_patch.py  profile.sh  profile_distributed.sh  start.sh
test/python/: flashMoeOp.py  profile_micro_benchmark.sh  qwen3MoeMicroBenchmark.py  test_FlashMoeOp.py  test_flashMoeOp.py  test_pythonBinding.py
test/python/benchmark/: benchmark.py
test/python/vllmMinimalEnv/: vllmMinimalEnv.py
test/singleGPU/cpp/: CMakeLists.txt
test/singleGPU/cpp/benchmarks/: moeGemmTileBenchmark.hip  moeKernelBenchmark.cpp  staticVsTaskSystemGemmBenchmark.cpp
test/singleGPU/cpp/moe/: moeApiTest.cpp  moeTest.cpp
test/singleGPU/cpp/moe/internal/: moeExpertFFN1Test.hip  moeExpertsTests.hip  moeGateTest.hip  moeRoutingTest.hip
test/singleGPU/cpp/moe/reference/: refExpertFFN1.h  refSoftmax.h  refTopk.h
test/singleGPU/cpp/taskSystem/: saxpyCoherenceTest.hip
test/singleGPU/cpp/taskSystem/gemmTest/: gemmTest.cpp
test/singleGPU/python/: flashMoeOp.py  profile_micro_benchmark.sh  test_pythonBinding.py
test/singleGPU/python/benchmark/: benchmark.py
test/singleGPU/python/vllmMinimalEnv/: vllmMinimalEnv.py
