cmake_minimum_required(VERSION 3.21 FATAL_ERROR)
project(SRC_HIP_MODULE LANGUAGES CXX)

enable_language(HIP)
set(CMAKE_HIP_STANDARD 17)
set(CMAKE_HIP_EXTENSIONS OFF)
set(CMAKE_HIP_STANDARD_REQUIRED ON)

set(ROCM_ROOT
    "/opt/rocm"
    CACHE PATH
    "Root directory of the ROCm installation"
)

list(APPEND CMAKE_PREFIX_PATH "${ROCM_ROOT}")

file(GLOB_RECURSE HIP_SRC ${PROJECT_SOURCE_DIR} *.hip)
file(GLOB_RECURSE CPP_SRC ${PROJECT_SOURCE_DIR} *.cpp)

add_library(SRC_HIP_MODULE STATIC ${HIP_SRC} ${CPP_SRC})
target_include_directories(SRC_HIP_MODULE PRIVATE ${PROJECT_SOURCE_DIR})
set_source_files_properties(${HIP_SRC} PROPERTIES LANGUAGE HIP)
set_target_properties(SRC_HIP_MODULE PROPERTIES POSITION_INDEPENDENT_CODE ON)